<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="pref"
            type="masegi.sho.classtable.data.model.PrefEntity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="masegi.sho.classtable.presentation.views.setting.SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Settings.GroupHeaderRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_class_table_group"/>

            <TextView
                android:id="@+id/select_week"
                style="@style/Settings.SingleTitleRow"
                android:text="@string/settings_select_days" />

            <View style="@style/Border" />

            <masegi.sho.classtable.presentation.customview.SettingSubTitleRow
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingTitle="@string/settings_count_of_class"
                app:settingSubTitle='@{String.valueOf(pref.dayLessonCount) + " classes"}'/>

            <View style="@style/Border" />

            <masegi.sho.classtable.presentation.customview.SettingSubTitleRow
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingTitle="@string/settings_choose_table"
                app:settingSubTitle="@{pref.name}"/>

            <View style="@style/Border" />

            <TextView
                android:id="@+id/edit_tables"
                style="@style/Settings.SingleTitleRow"
                android:text="@string/settings_edit_table"/>

            <View style="@style/Border" />

            <TextView
                style="@style/Settings.GroupHeaderRow"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/edit_time"
                style="@style/Settings.SingleTitleRow"
                android:text="@string/settings_class_time"/>

            <View style="@style/Border" />

            <TextView
                style="@style/Settings.GroupHeaderRow"
                android:text="@string/settings_notification"/>

            <masegi.sho.classtable.presentation.customview.SettingSwitchRowView
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingTitle="@string/settings_notification"
                app:settingDescription="@string/settings_notification_description"/>

            <View style="@style/Border" />

            <TextView
                style="@style/Settings.GroupHeaderRow"
                android:text="@string/settings_attendance"/>

            <masegi.sho.classtable.presentation.customview.SettingSwitchRowView
                android:id="@+id/attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingTitle="@string/settings_attendance_title"
                app:settingDescription="@string/settings_attendance_description"
                settingEnabled="@{false}"/>

            <View style="@style/Border" />

            <masegi.sho.classtable.presentation.customview.SettingSubTitleRow
                android:id="@+id/management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingTitle="@string/settings_management_mode"
                app:settingSubTitle="@string/settings_management_mode_chose"/>

            <View style="@style/Border" />

            <TextView
                style="@style/Settings.GroupHeaderRow"
                android:text="@string/settings_other"/>

            <TextView
                android:id="@+id/licenses"
                style="@style/Settings.SingleTitleRow"
                android:text="@string/settings_licenses"/>

        </LinearLayout>

    </ScrollView>

</layout>
