<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="android.view.Gravity" />
        <import type="android.view.View" />
        <variable
            name="lesson"
            type="masegi.sho.classtable.kotlin.data.model.Lesson" />
        <variable
            name="tasks"
            type="java.util.List&lt;masegi.sho.classtable.kotlin.data.model.Task&gt;" />
        <variable
            name="memo"
            type="masegi.sho.classtable.data.model.Memo" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".presentation.views.detail.DetailFragment" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/account_box"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_account_box_black_24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/teacher_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text='@{!lesson.teacher.isEmpty() ? lesson.teacher : "No Name"}'
                android:textColor="@color/char_black"
                android:textSize="18sp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/account_box"
                app:layout_constraintBottom_toBottomOf="@id/account_box"/>

            <ImageView
                android:id="@+id/location_on"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_location_on_black_24dp"
                app:layout_constraintStart_toStartOf="@id/account_box"
                app:layout_constraintTop_toBottomOf="@id/account_box" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text='@{!lesson.room.name.isEmpty() ? lesson.room.name : "No Location"}'
                android:textSize="18sp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/location_on"
                app:layout_constraintBottom_toBottomOf="@id/location_on" />

            <LinearLayout
                android:id="@+id/info_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_marginTop="24dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/location_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/sub_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/day_of_week"/>

                    <TextView
                        android:id="@+id/week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{lesson.weekString}"
                        android:textColor="@color/char_black"
                        android:textSize="21sp"
                        android:layout_alignStart="@id/sub_week"
                        android:layout_below="@id/sub_week" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/sub_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/start_time" />

                    <TextView
                        android:id="@+id/start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{lesson.startPeriod}"
                        android:textColor="@color/char_black"
                        android:textSize="21sp"
                        android:layout_alignStart="@id/sub_start"
                        android:layout_below="@id/sub_start" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/sub_section"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/section" />

                    <TextView
                        android:id="@+id/section"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(lesson.section)}"
                        android:textColor="@color/char_black"
                        android:textSize="21sp"
                        android:layout_alignStart="@id/sub_section"
                        android:layout_below="@id/sub_section" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/sub_attendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance_state"
                android:textColor="@color/char_black"
                android:textSize="15sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/info_section"
                app:layout_constraintStart_toStartOf="parent"/>
            
            <LinearLayout
                android:id="@+id/attendance"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_attendance">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/attend"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/attend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@{String.valueOf(lesson.attendance.attend)}"
                        android:textColor="@color/char_black"
                        android:textSize="48sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/times"
                        android:textSize="10sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/border_black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/late"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/late"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@{String.valueOf(lesson.attendance.late)}"
                        android:textColor="@color/char_black"
                        android:textSize="48sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/times"
                        android:textSize="10sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/border_black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/absent"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/absent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@{String.valueOf(lesson.attendance.absence)}"
                        android:textColor="@color/char_black"
                        android:textSize="48sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/times"
                        android:textSize="10sp" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/sub_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_todo"
                android:textColor="@color/char_black"
                android:textSize="15sp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/attendance"
                app:layout_constraintStart_toStartOf="@id/sub_attendance"/>
            
            <RelativeLayout
                android:id="@+id/todo_list_parent"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/sub_todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/no_task"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/no_todo_sub"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:visibility="@{tasks.size > 0 ? View.GONE : View.VISIBLE}"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/todo_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollIndicators="none"
                    android:visibility="@{tasks.size() > 0 ? View.VISIBLE : View.GONE}"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_todo" />

            </RelativeLayout>

            <TextView
                android:id="@+id/todo_more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/tasks_more_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/todo_list_parent"
                android:visibility="@{tasks.size() > 3 ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/sub_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo"
                android:textColor="@color/char_black"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/sub_attendance"
                app:layout_constraintTop_toBottomOf="@id/todo_more_text"/>

            <TextView
                android:id="@+id/memo_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=
                    "@{!(memo.content.isEmpty() || memo == null) ? memo.content : @string/no_memo}"
                android:textColor=
                    "@{!(memo.content.isEmpty() || memo == null) ? @color/char_black : @color/char_default}"
                android:gravity=
                    "@{!(memo.content.isEmpty() || memo == null) ? Gravity.NO_GRAVITY : Gravity.CENTER}"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_memo"
                app:layout_constraintBottom_toBottomOf="parent"/>
            
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>
